--- a/index.html
+++ b/index.html
@@ -3,4 +3,13 @@ layout: home
 search_exclude: true
 ---
 
+<body style="background-image: linear-gradient(to right, rgb(61, 135, 204) , rgb(231, 108, 212));">
+    <h1 align="center">
+        <b>
+            Welcome to Krish's Fastpages Site!
+        </b>
+    </h1>
+</body>
+</html>
+
 # Posts
