deploy: 7ab836aa3d6969d699412f9fd0799d03342e4ef8

--- a/index.html
+++ b/index.html
@@ -70,7 +70,16 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h1 id="posts">Posts</h1>
+        <div class="home"><body style="background-image: linear-gradient(to right, rgb(61, 135, 204) , rgb(231, 108, 212));">
+    <h1 align="center">
+        <b>
+            Welcome to Krish's Fastpages Site!
+        </b>
+    </h1>
+</body>
+<p>&lt;/html&gt;</p>
+
+<h1 id="posts">Posts</h1>
 
 
 
