--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ window.onload = wrap_img;
         <div class="home"><body style="background-image: linear-gradient(to right, rgb(61, 135, 204) , rgb(231, 108, 212));">
     <h1 align="center">
         <b>
-            Welcome to Krish's Fastpages Site!
+            Welcome to Jazair's Fastpages Site!
         </b>
     </h1>
 </body>
