--- a/about/index.html
+++ b/about/index.html
@@ -99,7 +99,7 @@ window.onload = wrap_img;
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <p class="feed-subscribe">
-          <a href="/Vcode/feed.xml">
+          <a href="https://jz21324.github.io/Vcode/feed.xml">
             <svg class="svg-icon orange">
               <use xlink:href="/Vcode/assets/minima-social-icons.svg#rss"></use>
             </svg><span>Subscribe</span>
